--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ body {
   font-size: 0.9375rem;
   font-family: "Open sans", Helvetica, Arial, sans-serif;
   color: #666666;
+  background-color: #f9ecf9; /*#ffe6ff;*/
   padding: 0;
 }
 .topspace {
@@ -225,7 +226,7 @@ a:hover {
 
 **********************************************************************/
 #head {
-  background: #f4f4f4 url(../images/lemon640.jpg) top center;
+  background: #f4f4f4 url(../images/wordcloud640.jpg) top center;
   background-size: cover;
   color: #7C7C7C;
   padding: 30px 0 35px 0;
@@ -251,10 +252,12 @@ a:hover {
 #head .tagline {
   display: block;
  /* font-size: 14px;*/
-  font-size: 1.5rem;
-  line-height: 1.2em;
+  font-weight: bold;
+  font-size: 1.8rem;
+  line-height: 1.9em;
   color: black; /*#7C7C7C;*/
-  margin: 5px 0 0;
+  margin: 0.20rem 0 0;
+  padding-bottom: 0.5rem;
 }
 #head .tagline b {
   font-weight: normal;
@@ -264,6 +267,7 @@ a:hover {
 }
 .home #head {
   padding: 90px 0;
+
 }
 .home #head .title {
   font-size: 49px;
